# simple-sdl-game

./: .gitignore  CMakeLists.txt  conanfile.txt
include/: asset_loaders.hpp  cleanup.hpp
src/: asset_loaders.cpp  cleanup.cpp  main.cpp
